--- a/contador-raryson/package.json
+++ b/contador-raryson/package.json
@@ -12,7 +12,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "mv build ../src"
+    "postbuild": "mv build ../src",
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
