--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index"
+    "start": "node src/index",
+    "postinstall": "cd contador-raryson && npm install"
   },
   "author": "",
   "license": "ISC",
